# ctrlx_ros2

./: .gitmodules  LICENSE  README.md
base-humble/: README.md
base-humble/snap/: snapcraft.yaml
base-humble/src/app/src/: ctrlx_datalayer_helper.h
base-humble/src/myinterface/: CMakeLists.txt  package.xml
base-humble/src/myinterface/msg/: DatalayerDigitalIo.msg
listener-rt-dl/: run-desktop-talker.sh
listener-rt-dl/snap/: snapcraft.yaml
listener-rt-dl/src/rt_dl/: CMakeLists.txt  package.xml
listener-rt-dl/src/rt_dl/src/: main.cpp
moveit-mtc/: LICENSE  README.md  build-snap-amd64.sh  colcon-build.sh  visualization_demo.sh
moveit-mtc/snap/: snapcraft.yaml
moveit-mtc/src/mtc_demo/: CMakeLists.txt  LICENSE.txt  package.xml
moveit-mtc/src/mtc_demo/launch/: task_demo.launch.py  visualization_demo.launch.py
moveit-mtc/src/mtc_tutorial/: CMakeLists.txt  package.xml
moveit-mtc/src/mtc_tutorial/launch/: initALL_demo.launch.py  move_group_demo.launch.py  mtc.rviz  mtc_demo.launch.py  pick_place_demo.launch.py  robot_demo.launch.py  task_demo.launch.py
moveit-mtc/src/mtc_tutorial/src/: mtc_node.cpp
moveit-mtc/wrapper/: run-initALL.sh  run-moveit.sh  run-task.sh  setup-paths.sh
nrt-dl-cpp/: README.md
nrt-dl-cpp/io-manager-cpp/snap/: snapcraft.yaml
nrt-dl-cpp/io-manager-cpp/src/app/: CMakeLists.txt
nrt-dl-cpp/io-manager-cpp/src/app/src/: io_manager.cpp
nrt-dl-cpp/io-manager-cpp/wrapper/: io-manager.sh
nrt-dl-cpp/io-manager-input-cpp/snap/: snapcraft.yaml
nrt-dl-cpp/io-manager-input-cpp/src/app/: CMakeLists.txt  package.xml
nrt-dl-cpp/io-manager-input-cpp/wrapper/: io-manager-input.sh
nrt-dl-cpp/io-manager-output-cpp/snap/: snapcraft.yaml
nrt-dl-cpp/io-manager-output-cpp/src/app/: CMakeLists.txt
nrt-dl-cpp/io-manager-output-cpp/src/app/src/: io_manager_output.cpp
nrt-dl-cpp/io-manager-output-cpp/wrapper/: io-manager-output.sh
nrt-dl-cpp/listener-nrt-dl-cpp/: README.md
nrt-dl-cpp/listener-nrt-dl-cpp/snap/: snapcraft.yaml
nrt-dl-cpp/listener-nrt-dl-cpp/src/app/src/: subscriber_member_function.cpp
nrt-dl-cpp/talker-nrt-dl-cpp/: README.md
nrt-dl-cpp/talker-nrt-dl-cpp/snap/: snapcraft.yaml
nrt-dl-py/: README.md
ros2-base-humble-deb/: build-snap-amd64.sh  colcon-build.sh  ros2-base-humble_amd64.1.txt  ros2-base-humble_amd64.2.txt  ros2-base-humble_amd64.txt
ros2-base-humble-deb/snap/: snapcraft.yaml
ros2-base-humble-deb/src/app/: CMakeLists.txt  package.xml
ros2-base-humble-deb/src/app/src/: subscriber_member_function.cpp
ros2-base-humble-deb/wrapper/: runner.sh
ros2-base-humble-deb/wrapper_copy/: run-listener.sh
roscon24/: README.md
roscon24/io-manager-input-cpp/: README.md
roscon24/io-manager-input-cpp/snap/: snapcraft.yaml
roscon24/io-manager-input-cpp/src/app/: CMakeLists.txt
roscon24/io-manager-input-cpp/src/app/src/: io_manager_input.cpp
roscon24/io-manager-output-cpp/: README.md
roscon24/io-manager-output-cpp/snap/: snapcraft.yaml
roscon24/io-manager-output-cpp/src/app/: CMakeLists.txt  package.xml
roscon24/io-manager-output-cpp/src/app/src/: io_manager_output.cpp
roscon24/io-manager-output-cpp/wrapper/: io-manager-output.sh
roscon24/rviz-desktop_ws/: README.md  clean.sh  colcon-build.sh  run.sh  run_scara_visu.sh  source.sh
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/: CMakeLists.txt  LICENSE  README.md  package.xml
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/include/: nodeCollection.hpp  publishTransform.hpp
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/launch/: main.launch.py  scara_visu.launch.py
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/meshes/scara/: ARM_bin.stl  BALLSCREW_bin.stl  BASE_bin.stl  FLANGE_bin.stl  FOREARM_LOWER_bin.stl  FOREARM_UPPER_bin.stl  Kisteklein_bin.stl
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/rviz/: scara.rviz
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/src/: nodeCollection.cpp  scara_state_manager.cpp  scara_state_publisher.cpp
roscon24/rviz-desktop_ws/src/ctrlx_roscon24/urdf/: scara.urdf
roscon24/scara-publisher-cpp/: README.md
roscon24/scara-publisher-cpp/snap/: snapcraft.yaml
roscon24/scara-publisher-cpp/src/app/: CMakeLists.txt
roscon24/scara-publisher-cpp/src/app/src/: scara_publisher.cpp
roscon24/scara-publisher-cpp/wrapper/: run-scara-publisher.sh
shm-dl/: README.md
shm-dl/listener-shm-dl/: README.md  colcon-build.sh  run-desktop-talker.sh
shm-dl/listener-shm-dl/snap/: snapcraft.yaml
shm-dl/listener-shm-dl/src/cpp_pubsub/: CMakeLists.txt  package.xml
shm-dl/listener-shm-dl/wrapper/: run-listener.sh
shm-dl/talker-shm-dl/: README.md
shm-dl/talker-shm-dl/snap/: snapcraft.yaml
shm-dl/talker-shm-dl/wrapper/: run-talker.sh
simple-cpp/: README.md
simple-cpp/listener-simple-cpp/: README.md
simple-cpp/listener-simple-cpp/snap/: snapcraft.yaml
simple-cpp/talker-simple-cpp/: README.md
simple-cpp/talker-simple-cpp/snap/: snapcraft.yaml
simple-cpp/talker-simple-cpp/wrapper/: run-talker.sh
simple-listener-dl-cpp/src/app/src/: subscriber_member_function.cpp
simple-py/: README.md
simple-talker-dl-cpp/: build-snap-amd64.sh
simple-talker-dl-cpp/src/app/src/: subscriber_member_function.cpp
simple-talker-dl-cpp/wrapper/: run-listener.sh
talker-rt-dl/snap/: snapcraft.yaml
talker-rt-dl/src/rt_dl/: CMakeLists.txt
talker-rt-dl/src/rt_dl/src/: main.cpp
(+3 files in other folders)
