<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ctrlx_roscon24</name>
  <version>1.0.0</version>
  <description>This is an example to visualize a SCARA robot in Rviz</description>
  <maintainer email="raul.cruz.oliver@gmail.com">raul</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  
  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>
  
  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <exec_depend>ros2launch</exec_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  
  
</package>
